Accept any point on a vehicle's route
When processing position updates from vehicles, allow any point on the
vehicle's route, explicitly including the initial position.

Merged-by: Martin Grzenia <martin.grzenia@iml.fraunhofer.de>